@@ -1,0 +1,7 @@
+from sys import stdout
+
+
+def print_flush(*args, **kwargs):
+    print(*args, **kwargs)
+    stdout.flush()
+
