@@ -1,6 +1,8 @@
 Copyright (C) 2022-2023 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_032023_2 - Flush output while printing by default. Handle incomplete reads.
+
 saw_032023_1 - Beginning to replace gevent with asyncio (just node so far).
 
 saw_031923_1 - Remove the idea of a peer being "already connected" to the node.
